fix: mobail header style collapse

--- a/src/components/header/index.module.css
+++ b/src/components/header/index.module.css
@@ -17,3 +17,7 @@
 .image {
   display: flex;
 }
+
+.sm {
+  padding: 16px;
+}
